# bibliometa

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: bibliometa.graph.rst  bibliometa.rst  bibliometa.utils.rst  conf.py  modules.rst
src/bibliometa/: __init__.py  config.py  configuration.py  conversion.py
src/bibliometa/graph/: __init__.py  analysis.py  conversion.py  similarity.py  utils.py  visualization.py
src/bibliometa/utils/: __init__.py  archives.py  utils.py
