[tool.poetry]
name = "bibliometa"
version = "0.1.0"
description = "A package for manipulating, converting and analysing bibliographic metadata"
authors = ["Andreas Lüschow <lueschow@sub.uni-goettingen.de>"]
license = "MIT License"
readme = "README.md"
homepage = "https://bibliometa.readthedocs.io"
repository = "https://github.com/alueschow/bibliometa"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pandas = "^1.3.0"
tqdm = "^4.61.2"
loguru = "^0.5.3"
scipy = "^1.7.0"
networkx = "^2.6.1"
geopandas = "^0.9.0"
matplotlib = "^3.4.2"
shapely = "^1.7.1"
numpy = "^1.21.1"
cartopy = "^0.19.0"
cython = "^0.29.24"

[tool.poetry.dev-dependencies]
sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
